--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
+		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "8.56.2",
@@ -39,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.3",
 		"moment": "^2.30.1",
