--- a/package.json
+++ b/package.json
@@ -1,50 +1,66 @@
 {
-	"name": "project-01",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"build:cssmin": "vite build && find ./build/client/theme -type f -name '*.css' -exec cleancss --batch --batch-suffix '' {} +",
-		"preview": "vite preview --host",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^4.0.1",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/kit": "^2.5.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@types/eslint": "8.56.2",
-		"@types/node": "^20.11.17",
-		"@typescript-eslint/eslint-plugin": "^7.0.1",
-		"@typescript-eslint/parser": "^7.0.1",
-		"autoprefixer": "^10.4.17",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.4",
-		"postcss": "^8.4.35",
-		"postcss-load-config": "^5.0.3",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "^1.70.0",
-		"svelte": "^5.0.0-next.52",
-		"svelte-check": "^3.6.4",
-		"svelte-preprocess": "^5.1.3",
-		"tailwindcss": "^3.4.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.1"
-	},
-	"type": "module",
-	"dependencies": {
-		
-		"clsx": "^2.1.0",
-		"dotenv": "^16.4.3",
-		"moment": "^2.30.1",
-		"tailwind-merge": "^2.2.1",
-		"tailwind-variants": "^0.2.0"
-	}
+  "name": "project-01",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "build:cssmin": "vite build && find ./build/client/theme -type f -name '*.css' -exec cleancss --batch --batch-suffix '' {} +",
+    "preview": "vite preview --host",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "db:generate": "drizzle-kit generate:pg --config=drizzle.config.ts",
+    "db:generate:custom": "drizzle-kit generate:pg --custom --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit push:pg --config=drizzle.config.ts",
+    "db:pull": "drizzle-kit introspect:pg --config=drizzle.config.ts",
+    "db:check": "drizzle-kit check:pg --config=drizzle.config.ts",
+    "db:up": "drizzle-kit up:pg --config=drizzle.config.ts"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/adapter-node": "^4.0.1",
+    "svelte-adapter-bun": "^0.5.2",
+    "@sveltejs/kit": "^2.5.2",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@types/eslint": "8.56.4",
+    "@types/node": "^20.11.21",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "autoprefixer": "^10.4.17",
+    "bun-types": "^1.0.29",
+    "clsx": "^2.1.0",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0-next.6",
+    "moment": "^2.30.1",
+    "postcss": "^8.4.35",
+    "postcss-load-config": "^5.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "sass": "^1.71.1",
+    "svelte": "^5.0.0-next.68",
+    "svelte-check": "^3.6.5",
+    "svelte-preprocess": "^5.1.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwind-variants": "^0.2.0",
+    "tailwindcss": "^3.4.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
+  },
+  "dependencies": {
+    "postgres": "^3.4.3",
+    "valibot": "^0.29.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.29.4",
+    "drizzle-valibot": "^0.1.1"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=10",
+    "pnpm": ">=8"
+  }
 }
