--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,128 +2,82 @@
 	"window.zoomLevel": 1,
 	"workbench.startupEditor": "none",
 	"workbench.editor.labelFormat": "short",
+	"workbench.colorTheme": "Developers Theme - Slack Dark",
 	"workbench.iconTheme": "developer-icon-theme",
+	"workbench.productIconTheme": "developer-icons",
 	"workbench.colorCustomizations": {
 		"titleBar.activeBackground": "#1a1a1a",
 		"titleBar.activeForeground": "#c7c4c3",
 		"activityBar.background": "#121212",
-		//"activityBar.activeBackground": "#7faebe50",
-		"activityBar.foreground": "#da7056",
 		"activityBar.inactiveForeground": "#3a3a3a",
 		"activityBar.border": "#ffffff00",
-		"activityBar.activeBorder": "#da7056",
-		"activityBarBadge.background": "#da7056",
 		"sideBar.background": "#252525",
 		"sideBar.border": "#252525",
-		"statusBarItem.remoteBackground": "#da7056",
 		"statusBar.border": "#00000000",
 		"statusBar.focusBorder": "#00000000",
-		"statusBarItem.hoverBackground": "#da7056",
 		"statusBarItem.hoverForeground": "#ffffff",
-		"tab.activeBorderTop": "#da7056",
 		"list.inactiveSelectionBackground": "#343434",
 		"list.activeSelectionBackground": "#343434",
 		"list.focusAndSelectionOutline": "#343434",
+		//-----------------SVELTE-----------------
+		"activityBar.foreground": "#da7056",
+		"activityBar.activeBorder": "#da7056",
+		"activityBarBadge.background": "#da7056",
+		"statusBarItem.remoteBackground": "#da7056",
+		"statusBarItem.hoverBackground": "#da7056",
+		"tab.activeBorderTop": "#da7056",
 		"terminal.tab.activeBorder": "#da7056"
-		//"tab.activeBorder":"#3988a2"
+		//-----------------VUE-----------------
+		// "activityBar.foreground": "#07b76e",
+		// "activityBar.activeBorder": "#07b76e",
+		// "activityBarBadge.background": "#07b76e",
+		// "statusBarItem.remoteBackground": "#07b76e",
+		// "statusBarItem.hoverBackground": "#07b76e",
+		// "tab.activeBorderTop": "#07b76e",
+		// "terminal.tab.activeBorder": "#07b76e"
 	},
-	"explorer.compactFolders": false,
+	"editor.accessibilitySupport": "off",
 	"editor.fontFamily": "'FiraCode Nerd Font', monospace",
+	"editor.fontSize": 14,
 	"editor.formatOnSave": true,
-	"editor.fontSize": 15,
 	"editor.minimap.enabled": false,
 	"editor.linkedEditing": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit"
+	},
+	"explorer.compactFolders": false,
 	"breadcrumbs.enabled": false,
 	"prettier.configPath": ".prettierrc",
 	"scss.lint.unknownAtRules": "ignore",
 	"css.lint.unknownAtRules": "ignore",
 	"css.lint.emptyRules": "ignore",
 	"scss.lint.emptyRules": "ignore",
-
 	"files.associations": {
 		"*.css": "tailwindcss"
 	},
-
-	"[typescript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"[markdown]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"[html]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"[javascript]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"[typescriptreact]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
-	"emmet.includeLanguages": {
-		"javascript": "javascriptreact",
-		"typescript": "typescriptreact"
-	},
-	"terminal.integrated.profiles.osx": {
-		"bash": null
-	},
-	"gitlens.showWelcomeOnInstall": false,
-	"gitlens.showWhatsNewAfterUpgrades": false,
-	"gitlens.currentLine.pullRequests.enabled": false,
-	"gitlens.currentLine.enabled": false,
-	"tailwindCSS.includeLanguages": {
-		"html": "html",
-		"javascript": "javascript",
-		"css": "css"
-	},
-	"editor.quickSuggestions": {
-		"strings": true
-	},
 	"files.exclude": {
-		"**/.git": false,
-		"**/.svn": false,
-		"**/.hg": false,
-		"**/CVS": false,
-		"**/.DS_Store": false,
-		"**/Thumbs.db": false,
-		".svelte-kit": false,
-		".vscode": false,
-		"node_modules": false,
-		"README.md": false,
-		".eslintignore": false,
-		".eslintrc.cjs": false,
-		".npmrc": false,
-		".prettierignore": false,
-		".prettierrc": false,
-		"bun.lockb": false,
-		"postcss.config.js": false,
-		"vite.config.ts": false,
-		".dockerignore": false,
-		".gitignore": false,
-		"tsconfig.json": false
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		".svelte-kit": true,
+		".vscode": true,
+		"node_modules": true,
+		"README.md": true,
+		".eslintignore": true,
+		".eslintrc.cjs": true,
+		".npmrc": true,
+		".prettierignore": true,
+		".prettierrc": true,
+		"bun.lockb": true,
+		"postcss.config.js": true,
+		"vite.config.ts": true,
+		".dockerignore": true,
+		".gitignore": true,
+		"tsconfig.json": true
 	},
-	"explorerExclude.backup": {
-		"**/.git": false,
-		"**/.svn": false,
-		"**/.hg": false,
-		"**/CVS": false,
-		"**/.DS_Store": false,
-		"**/Thumbs.db": false,
-		".svelte-kit": false,
-		".vscode": false,
-		"node_modules": false,
-		"README.md": false,
-		".eslintignore": false,
-		".eslintrc.cjs": false,
-		".npmrc": false,
-		".prettierignore": false,
-		".prettierrc": false,
-		"bun.lockb": false,
-		"postcss.config.js": false,
-		"vite.config.ts": false,
-		".dockerignore": false,
-		".gitignore": false,
-		"tsconfig.json": false
-	},
-	"explorerExclude.showPicker": false,
-	"workbench.productIconTheme": "developer-icons"
+	"explorerExclude.backup": {}
 }
