--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "project-01",
 	"version": "0.0.1",
 	"private": true,
+	"prepare": "panda codegen",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -21,7 +22,6 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/adapter-node": "^4.0.1",
-		"svelte-adapter-bun": "^0.5.2",
 		"@sveltejs/kit": "^2.5.2",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/eslint": "8.56.5",
@@ -34,7 +34,7 @@
 		"drizzle-kit": "^0.20.14",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.9",
+		"eslint-plugin-svelte": "^2.36.0-next.10",
 		"moment": "^2.30.1",
 		"postcss": "^8.4.35",
 		"postcss-load-config": "^5.0.3",
@@ -42,6 +42,7 @@
 		"prettier-plugin-svelte": "^3.2.2",
 		"sass": "^1.71.1",
 		"svelte": "^5.0.0-next.72",
+		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^3.6.6",
 		"svelte-preprocess": "^5.1.3",
 		"tailwind-merge": "^2.2.1",
@@ -52,11 +53,11 @@
 		"vite": "^5.1.5"
 	},
 	"dependencies": {
-		"postgres": "^3.4.3",
-		"valibot": "^0.29.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.29.4",
-		"drizzle-valibot": "^0.1.1"
+		"drizzle-valibot": "^0.1.1",
+		"postgres": "^3.4.3",
+		"valibot": "^0.29.0"
 	},
 	"type": "module",
 	"engines": {
